--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 Django==1.9.5
+django-appconf==1.0.2
+django-compressor==2.0
+django-crispy-forms==1.6.0
 Markdown==2.6.6
+rcssmin==1.0.6
+rjsmin==1.0.12
