--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ gunicorn==19.4.5
 Markdown==2.6.6
 rcssmin==1.0.6
 rjsmin==1.0.12
+Django==1.10.1
+django-appconf==1.0.2
+django-compressor==2.1
+django-crispy-forms==1.6.0
+gunicorn==19.6.0
+Markdown==2.6.6
+rcssmin==1.0.6
+rjsmin==1.0.12
